--- a/area_51.qmd
+++ b/area_51.qmd
@@ -1,26 +1,16 @@
 ---
 title: "area_51"
-editor: visual
+execute:
+    echo: false
+jupyter: python3
 ---
 
-```{r}
-#
-```
-
 ```{python}
-import numpy as np
 import pandas as pd
-import seaborn as sns
-import patchworklib as pw
 from plotnine import *
-from plotnine.data import *
-import plotnine
-from statsmodels.tools.tools import maybe_unwrap_results
-from statsmodels.graphics.gofplots import ProbPlot
-from statsmodels.stats.outliers_influence import variance_inflation_factor
-import matplotlib.pyplot as plt
-from typing import Type
 import statsmodels.formula.api as smf
+import patchworklib as pw
+from plotnine.data import *
 ```
 
 ```{python}
@@ -32,12 +22,10 @@ oystercatcher_py = pd.read_csv("data/CS2-oystercatcher-feeding.csv")
 model = smf.ols(formula= "feeding ~ C(site)", data = oystercatcher_py)
 # fit the model
 results = model.fit()
-
-results.summary()
 ```
 
 ```{python}
-# Get different Variables for diagnostic
+# get relevant variables from model
 residuals = results.resid.rename("residuals")
 fitted_values = results.fittedvalues.rename("fitted_values")
 std_resid = pd.Series(results.resid_pearson).rename("std_resid")
@@ -54,39 +42,14 @@ model_values = residuals.to_frame().join(fitted_values).join(std_resid).join(coo
 
 model_values["n_obs"] = n_obs
 ```
-```{python}
-g1 = pw.load_ggplot(ggplot(mtcars) 
-                    + geom_point(aes("mpg", "disp"))
-                    + theme(text=element_text(size=14), axis_title=element_text(size=18)),
-                    figsize=(2,3))
-g2 = pw.load_ggplot(ggplot(mtcars) 
-                    + geom_boxplot(aes("gear", "disp", group="gear"))
-                    + theme(text=element_text(size=14), axis_title=element_text(size=18)), 
-                    figsize=(2,3))
-g3 = pw.load_ggplot(ggplot(mtcars, aes('wt', 'mpg', color='factor(gear)')) 
-                    + geom_point() + stat_smooth(method='lm') 
-                    + facet_wrap('~gear')
-                    + theme(text=element_text(size=14), axis_title=element_text(size=18)), 
-                    figsize=(3,3))
-g4 = pw.load_ggplot(ggplot(data=diamonds) 
-                    + geom_bar(mapping=aes(x="cut", fill="clarity"), position="dodge")
-                    + theme(text=element_text(size=14), axis_title=element_text(size=20, color="blue"), 
-                            legend_text=element_text(size=14), legend_title=element_text(size=18)), 
-                    figsize=(5,2))
-g1234 = (g1|g2|g3)/g4
-g1234.savefig()
-```
 
 ## Q-Q plot
 ```{python}
-p1 = (
+(
   ggplot(model_values, aes(sample = "residuals"))
   + stat_qq()
   + stat_qq_line(colour = "blue")
 )
-
-p1 = pw.load_ggplot(p1, figsize=(2,3))
-p1.savefig()
 ```
 
 
@@ -117,5 +80,49 @@ p1.savefig()
     + geom_hline(aes(yintercept = 0))
     + geom_hline(aes(yintercept = 4/n_obs), colour = "blue", linetype = "dashed")
 )
+```
+
+```{python}
+p1 = (
+    ggplot(model_values, aes(x = "fitted_values", y = "residuals"))
+    + geom_point()
+    + geom_smooth(se = False, colour = "red")
+)
+
+p2 = (
+  ggplot(model_values, aes(sample = "residuals"))
+  + stat_qq()
+  + stat_qq_line(colour = "blue")
+)
+
+p3 = (
+    ggplot(model_values, aes(x = "fitted_values", y = "std_resid"))
+    + geom_point()
+    + geom_smooth(se = False, colour = "red")
+)
+
+p4 = (
+    ggplot(model_values, aes(x = "obs", y = "cooks_d"))
+    + geom_point()
+    + geom_segment(aes(xend = "obs", yend = 0), colour = "blue")
+    + geom_hline(aes(yintercept = 0))
+    + geom_hline(aes(yintercept = 4/n_obs), colour = "blue", linetype = "dashed")
+)
+
+p1 = pw.load_ggplot(p1, figsize=(3,2))
+p2 = pw.load_ggplot(p2, figsize=(3,2))
+p3 = pw.load_ggplot(p3, figsize=(3,2))
+p4 = pw.load_ggplot(p4, figsize=(3,2))
+
+dplots = (p1 | p2) / (p3 | p4)
+dplots.savefig()
+```
+
+```{python}
+from dgplots import dgplots
+```
+
+```{python}
+dgplots(results)
 ```
 
