--- a/area_51.qmd
+++ b/area_51.qmd
@@ -1,17 +1,16 @@
 ---
 title: "area_51"
-execute:
-    echo: false
-jupyter: python3
 ---
+info
+```{r}
+source("setup.R")
+```
 
 ```{python}
-import pandas as pd
-from plotnine import *
-import statsmodels.formula.api as smf
-import patchworklib as pw
-from plotnine.data import *
+from dgplots import *
 ```
+
+
 
 ```{python}
 oystercatcher_py = pd.read_csv("data/CS2-oystercatcher-feeding.csv")
@@ -25,104 +24,64 @@ results = model.fit()
 ```
 
 ```{python}
-# get relevant variables from model
-residuals = results.resid.rename("residuals")
-fitted_values = results.fittedvalues.rename("fitted_values")
-std_resid = pd.Series(results.resid_pearson).rename("std_resid")
-influence = results.get_influence()
-cooks_d = pd.Series(influence.cooks_distance[0]).rename("cooks_d")
-leverage = pd.Series(influence.hat_matrix_diag).rename("leverage")
-obs = pd.Series(range(len(residuals))).rename("obs")
-n_obs = len(obs.index)
+test = dgplots(results)
 ```
 
 ```{python}
-# combine Series into DataFrame
-model_values = residuals.to_frame().join(fitted_values).join(std_resid).join(cooks_d).join(leverage).join(obs)
+from datetime import datetime
 
-model_values["n_obs"] = n_obs
-```
+date = datetime.now().strftime("%Y_%m_%d-%I:%M:%S_%p")
+print(f"filename_{date}")
 
-## Q-Q plot
-```{python}
-(
-  ggplot(model_values, aes(sample = "residuals"))
-  + stat_qq()
-  + stat_qq_line(colour = "blue")
-)
-```
-
-
-## Residual plot
-```{python}
-(
-    ggplot(model_values, aes(x = "fitted_values", y = "residuals"))
-    + geom_point()
-    + geom_smooth(se = False, colour = "red")
-)
-```
-
-## Location-Scale plot
-```{python}
-(
-    ggplot(model_values, aes(x = "fitted_values", y = "std_resid"))
-    + geom_point()
-    + geom_smooth(se = False, colour = "red")
-)
-```
-
-## Cook's distance
-```{python}
-(
-    ggplot(model_values, aes(x = "obs", y = "cooks_d"))
-    + geom_point()
-    + geom_segment(aes(xend = "obs", yend = 0), colour = "blue")
-    + geom_hline(aes(yintercept = 0))
-    + geom_hline(aes(yintercept = 4/n_obs), colour = "blue", linetype = "dashed")
-)
+test.savefig(fname=(f"images/{date}_dgplots" ".png"))
 ```
 
 ```{python}
-p1 = (
-    ggplot(model_values, aes(x = "fitted_values", y = "residuals"))
-    + geom_point()
-    + geom_smooth(se = False, colour = "red")
-)
+import glob
+import os
+# get list of images created by dgplots
+list_of_files = glob.glob('images/*dgplots.png')
+# get the latest file
+latest_file = max(list_of_files, key=os.path.getctime)
+```
 
-p2 = (
-  ggplot(model_values, aes(sample = "residuals"))
-  + stat_qq()
-  + stat_qq_line(colour = "blue")
-)
-
-p3 = (
-    ggplot(model_values, aes(x = "fitted_values", y = "std_resid"))
-    + geom_point()
-    + geom_smooth(se = False, colour = "red")
-)
-
-p4 = (
-    ggplot(model_values, aes(x = "obs", y = "cooks_d"))
-    + geom_point()
-    + geom_segment(aes(xend = "obs", yend = 0), colour = "blue")
-    + geom_hline(aes(yintercept = 0))
-    + geom_hline(aes(yintercept = 4/n_obs), colour = "blue", linetype = "dashed")
-)
-
-p1 = pw.load_ggplot(p1, figsize=(3,2))
-p2 = pw.load_ggplot(p2, figsize=(3,2))
-p3 = pw.load_ggplot(p3, figsize=(3,2))
-p4 = pw.load_ggplot(p4, figsize=(3,2))
-
-dplots = (p1 | p2) / (p3 | p4)
-dplots.savefig()
+```{r}
+knitr::include_graphics(py$latest_file)
 ```
 
 ```{python}
-from dgplots import dgplots
+state_py = pd.read_csv("data/CS3-statedata.csv")
 ```
 
 ```{python}
-dgplots(results)
+# define the model
+model = smf.ols(formula= "population ~ area + murder", data = state_py)
+# fit the model
+results = model.fit()
 ```
 
+```{python}
+test = dgplots(results)
+```
+
+```{python}
+from datetime import datetime
+
+date = datetime.now().strftime("%Y_%m_%d-%I:%M:%S_%p")
+print(f"filename_{date}")
+
+test.savefig(fname=(f"images/{date}_dgplots" ".png"))
+```
+
+```{python}
+import glob
+import os
+# get list of images created by dgplots
+list_of_files = glob.glob('images/*dgplots.png')
+# get the latest file
+latest_file = max(list_of_files, key=os.path.getctime)
+```
+
+```{r}
+knitr::include_graphics(py$latest_file)
+```
